--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
       <h2 class="d-flex justify-content-center">Esercizio 5</h2>
       <div class="container-md bg-info">
         <div class="row">
-          <div class="col-none-12 col-sm-12 col-md-8 col-lg-3 text-white p-3">
+          <div class="col-none-12 col-sm-12 col-md-8 col-lg-3 text-white p-3 d-flex">
             <div class="col-8 bg-secondary text-white p-3">A</div>
             <div class="col-8 bg-secondary text-white p-3">B</div>
           </div>
-          <div class="col-none-12 col-sm-12 col-md-8 col-lg-3 text-white p-3">
+          <div class="col-none-12 col-sm-12 col-md-8 col-lg-3 text-white p-3 d-flex">
             <div class="col-8 bg-secondary text-white p-3">A</div>
             <div class="col-8 bg-secondary text-white p-3">B</div>
           </div>
@@ -119,8 +119,8 @@
       <h2 class="d-flex justify-content-center">Esercizio 6</h2>
       <div class="container-md bg-black">
         <div class="row">
-          <div class="col-xl-5 text-white p-3">1</div>
-          <div class="col-xl-7 text-white p-3">2</div>
+          <div class="col-3 offset-md-3 text-white p-3">1</div>
+          <div class="col-7 text-white p-3">2</div>
         </div>
       </div>
     </section>
