--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 
     <section>
       <h2 class="d-flex justify-content-center">Esercizio 6</h2>
-      <div class="container-md bg-black">
+      <div class="container">
         <div class="row">
-          <div class="col-3 offset-md-2 text-white p-3">1</div>
-          <div class="col-7 text-white p-3">2</div>
+          <div class="col-3 text-white p-3 bg-black">1</div>
+          <div class="col-7 text-white p-3 offset-md-2 bg-black">2</div>
         </div>
       </div>
     </section>
